Upload project to GitHub for Jules integration

--- a/services/signal-api/backend/data/config.json
+++ b/services/signal-api/backend/data/config.json
@@ -5,6 +5,10 @@
         {
           "code": "688291",
           "name": "金橙子"
+        },
+        {
+          "code": "301333",
+          "name": "诺思格"
         }
       ]
     }
