docs+frontend+health: unify API bases, add health endpoints

--- a/services/signal-api/backend/data/config.json
+++ b/services/signal-api/backend/data/config.json
@@ -9,6 +9,10 @@
         {
           "code": "301333",
           "name": "诺思格"
+        },
+        {
+          "code": "688720",
+          "name": "艾森股份"
         }
       ]
     }
