refactor: update services and remove legacy options module
- Update API gateway, signal-api app, and routers
- Remove legacy options router and related docs
- Update support resistance composer and limit_up router
- Update .gitignore to exclude generated files

--- a/.gitignore
+++ b/.gitignore
@@ -66,4 +66,15 @@ yarn-error.log*
 
 # 测试覆盖率
 coverage/
-.nyc_output 
+.nyc_output
+
+# Large Data Directories
+services/signal-api/quant_data/
+
+# IDE and tool configs
+.kiro/
+
+# Backtest results and generated data
+services/signal-api/*_results.json
+services/signal-api/*_params.json
+services/signal-api/valid_stocks.txt
