--- a/services/signal-api/backend/data/config.json
+++ b/services/signal-api/backend/data/config.json
@@ -13,6 +13,22 @@
         {
           "code": "688720",
           "name": "艾森股份"
+        },
+        {
+          "code": "688583",
+          "name": "思看科技"
+        },
+        {
+          "code": "688155",
+          "name": "先惠技术"
+        },
+        {
+          "code": "688307",
+          "name": "中润光学"
+        },
+        {
+          "code": "002970",
+          "name": "锐明技术"
         }
       ]
     }
